# mermaido

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: basic.py  config_file.py  diagram_types.py  error_handling.py  styling.py  themes.py
src/mermaido/: __init__.py  __main__.py
tests/: test_mermaido.py
